<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/settings"/>
    <item
        android:id="@+id/share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="104"
        android:showAsAction="ifRoom"
        android:title="@string/action_share"/>
    <item
        android:id="@+id/search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="101"
        android:showAsAction="always"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/save"
        android:icon="@drawable/ic_action_collection"
        android:orderInCategory="103"
        android:showAsAction="ifRoom"
        android:title="@string/action_save"
        android:visible="false"/>
    <item
        android:id="@+id/open"
        android:icon="@drawable/ic_action_web_site"
        android:orderInCategory="102"
        android:showAsAction="ifRoom"
        android:title="@string/action_open"
        android:visible="false"/>
	<item
        android:id="@+id/refresh"
        android:icon="@android:drawable/stat_notify_sync"
        android:orderInCategory="102"
        android:showAsAction="always"
        android:title="@string/action_refresh"
        android:visible="false"/>
	
</menu>